--- a/app/src/main/res/layout/activity_add_ad.xml
+++ b/app/src/main/res/layout/activity_add_ad.xml
@@ -80,10 +80,22 @@
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
         app:layout_constraintBottom_toTopOf="@+id/navigation"
-        app:layout_constraintEnd_toStartOf="@+id/image1"
+        app:layout_constraintEnd_toStartOf="@+id/buttonprevious"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/location"
         app:srcCompat="@android:drawable/ic_input_add" />
+
+    <ImageButton
+        android:id="@+id/buttonprevious"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
+        app:layout_constraintBottom_toTopOf="@+id/navigation"
+        app:layout_constraintEnd_toStartOf="@+id/image1"
+        app:layout_constraintStart_toEndOf="@+id/addimg"
+        app:layout_constraintTop_toBottomOf="@+id/location"
+        app:layout_constraintVertical_bias="0.492"
+        app:srcCompat="@android:drawable/ic_media_previous" />
 
     <ImageView
         android:id="@+id/image1"
@@ -91,7 +103,7 @@
         android:layout_height="50dp"
         app:layout_constraintBottom_toTopOf="@+id/navigation"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/addimg"
+        app:layout_constraintStart_toEndOf="@+id/buttonprevious"
         app:layout_constraintTop_toBottomOf="@+id/location"
         app:srcCompat="@android:drawable/screen_background_light_transparent" />
 
@@ -100,10 +112,21 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         app:layout_constraintBottom_toTopOf="@+id/navigation"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/buttonnext"
         app:layout_constraintStart_toEndOf="@+id/image1"
         app:layout_constraintTop_toBottomOf="@+id/location"
         app:srcCompat="@android:drawable/screen_background_light_transparent" />
+
+    <ImageButton
+        android:id="@+id/buttonnext"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="4dp"
+        app:layout_constraintBottom_toTopOf="@+id/navigation"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/image2"
+        app:layout_constraintTop_toBottomOf="@+id/location"
+        app:srcCompat="@android:drawable/ic_media_next" />
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
