--- a/app/src/main/res/layout/activity_ads.xml
+++ b/app/src/main/res/layout/activity_ads.xml
@@ -7,6 +7,11 @@
     android:layout_height="match_parent"
     tools:context=".ads">
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
         android:layout_width="0dp"
