--- a/app/src/main/res/layout/activity_adview.xml
+++ b/app/src/main/res/layout/activity_adview.xml
@@ -72,8 +72,8 @@
 
     <ImageButton
         android:id="@+id/pPicture"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="112dp"
+        android:layout_height="118dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/cName"
         app:layout_constraintStart_toEndOf="@+id/share"
