--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -6,7 +6,7 @@
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".settings">
+    tools:context=".Activitys.SettingsActivity">
 
     <ImageView
         android:id="@+id/profilePicture"
