--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -96,12 +96,12 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="@string/adress"
+        android:importantForAutofill="no"
         android:inputType="textPostalAddress"
-        app:layout_constraintBottom_toTopOf="@+id/navigation"
+        app:layout_constraintBottom_toTopOf="@+id/bGetPic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/phone"
-        android:importantForAutofill="no" />
+        app:layout_constraintTop_toBottomOf="@+id/phone" />
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
@@ -115,5 +115,26 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:menu="@menu/navigation" />
+
+    <Button
+        android:id="@+id/bGetPic"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Select profile picture"
+        app:layout_constraintBottom_toTopOf="@+id/navigation"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/bSave"
+        app:layout_constraintTop_toBottomOf="@+id/adress" />
+
+    <Button
+        android:id="@+id/bSave"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:text="Save"
+        app:layout_constraintBottom_toTopOf="@+id/navigation"
+        app:layout_constraintEnd_toStartOf="@+id/bGetPic"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/adress" />
 
 </android.support.constraint.ConstraintLayout>
