--- a/app/src/main/res/layout/recycler_item.xml
+++ b/app/src/main/res/layout/recycler_item.xml
@@ -21,13 +21,12 @@
 
     <ImageView
         android:id="@+id/post_image"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="183dp"
         android:layout_weight="1"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toTopOf="@+id/post_title"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
