--- a/app/src/main/res/layout/activity_adview.xml
+++ b/app/src/main/res/layout/activity_adview.xml
@@ -8,8 +8,9 @@
 
     <ImageView
         android:id="@+id/image"
-        android:layout_width="258dp"
+        android:layout_width="wrap_content"
         android:layout_height="126dp"
+        app:layout_constraintBottom_toTopOf="@+id/lDesc"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -18,7 +19,7 @@
     <EditText
         android:id="@+id/lDesc"
         android:layout_width="243dp"
-        android:layout_height="118dp"
+        android:layout_height="wrap_content"
         android:ems="10"
         android:hint="@string/long_description"
         android:inputType="textMultiLine"
@@ -46,6 +47,7 @@
         android:ems="10"
         android:hint="@string/location"
         android:inputType="textPostalAddress"
+        app:layout_constraintBottom_toTopOf="@+id/pPicture"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/phone" />
@@ -72,8 +74,8 @@
 
     <ImageButton
         android:id="@+id/pPicture"
-        android:layout_width="112dp"
-        android:layout_height="118dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/cName"
         app:layout_constraintStart_toEndOf="@+id/share"
