--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -84,17 +84,17 @@
         android:hint="@string/phone_number"
         android:importantForAutofill="no"
         android:inputType="phone"
-        app:layout_constraintBottom_toTopOf="@+id/adress"
+        app:layout_constraintBottom_toTopOf="@+id/address"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/email" />
 
     <EditText
-        android:id="@+id/adress"
+        android:id="@+id/address"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="@string/adress"
+        android:hint="@string/address"
         android:importantForAutofill="no"
         android:inputType="textPostalAddress"
         app:layout_constraintBottom_toTopOf="@+id/bGetPic"
@@ -123,6 +123,6 @@
         app:layout_constraintBottom_toTopOf="@+id/navigation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/adress" />
+        app:layout_constraintTop_toBottomOf="@+id/address" />
 
 </android.support.constraint.ConstraintLayout>
