--- a/app/src/main/res/layout/activity_add_ad.xml
+++ b/app/src/main/res/layout/activity_add_ad.xml
@@ -105,6 +105,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/buttonprevious"
         app:layout_constraintTop_toBottomOf="@+id/location"
+        app:layout_constraintVertical_bias="0.492"
         app:srcCompat="@android:drawable/screen_background_light_transparent" />
 
     <ImageView
