--- a/app/src/main/res/layout/activity_add_ad.xml
+++ b/app/src/main/res/layout/activity_add_ad.xml
@@ -42,14 +42,14 @@
         android:ems="10"
         android:hint="@string/long_description"
         android:inputType="textMultiLine"
-        app:layout_constraintBottom_toTopOf="@+id/phone"
+        app:layout_constraintBottom_toTopOf="@+id/sDesc"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/desc"
         android:autofillHints="" />
 
     <EditText
-        android:id="@+id/phone"
+        android:id="@+id/sDesc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:autofillHints=""
@@ -72,7 +72,7 @@
         app:layout_constraintBottom_toTopOf="@+id/addimg"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/phone" />
+        app:layout_constraintTop_toBottomOf="@+id/sDesc" />
 
     <ImageButton
         android:id="@+id/addimg"
