--- a/app/src/main/res/layout/recycler_item.xml
+++ b/app/src/main/res/layout/recycler_item.xml
@@ -11,12 +11,17 @@
         android:id="@+id/post_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="4dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="100dp"
         android:layout_weight="1"
         android:text="POST TITLE"
+        android:textAlignment="center"
+        android:textAllCaps="true"
+        android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/post_desc"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
+        app:layout_constraintEnd_toStartOf="@+id/vNumber"
+        app:layout_constraintStart_toEndOf="@+id/pPicture"
         app:layout_constraintTop_toBottomOf="@+id/post_image" />
 
     <ImageView
@@ -34,22 +39,40 @@
         android:id="@+id/post_desc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="36dp"
+        android:layout_marginEnd="100dp"
         android:layout_weight="1"
         android:text="POST DESC"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/vNumber"
+        app:layout_constraintStart_toEndOf="@+id/pPicture"
         app:layout_constraintTop_toBottomOf="@+id/post_title" />
 
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="63dp"
-        android:layout_height="0dp"
+        android:id="@+id/pPicture"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/post_title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/post_image"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@android:drawable/menuitem_background"
         tools:srcCompat="@tools:sample/avatars" />
+
+    <TextView
+        android:id="@+id/vNumber"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/imageView"
+        app:layout_constraintTop_toBottomOf="@+id/post_image" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/post_image"
+        app:srcCompat="@android:drawable/ic_menu_view" />
 
 </android.support.constraint.ConstraintLayout>
